# wanderlog

./: .env.example  .gitignore  README.md  package-lock.json
.sqlx/: query-15b21d8c6419ffa3e199d2cd81d5b9383a3df77c94e079f928efe278ee706894.json  query-1a710783a557629d0977bfb6ac61cbc16c5ae92b99fb463673596a996223c36f.json  query-32038c2658540d6264bcfe3ac0e9bd9af4d4bb6e232e9434ec3d8cdc136dd2e3.json  query-5adbe0be34363adcedb48b7ef9060c4cf15269177a303b00c0f23dc56d5783a1.json  query-6ae4db3f36f184e9ff1975dca713828a153b7cd55ca398bfbbd42298e318aa7e.json  query-6cd49a05d6d0ca38d0d18626bbbfc56f727e7f00516f008e0ece9957d979fb59.json  query-6dab5113d86746ede46b8878650bd05a91f3b7b219e9897d12a73fe752136c83.json  query-718af8275a86de30b391cdfda6a5606642d65dd1ad46d10358dda6808e68546e.json  query-75b569788da3fed868bb2d1a2cd24e5c74e1bafd5bc2ae1b3cf6d40049f06f6b.json  query-7c9783a620e8d1d21844b1433a48c549c98bfe4d1ed625f0b315de5809e2c1d8.json  query-a0315fbba3db14b5ee99c7e3e653c08de62c2d1d50e68c4f72418ccddbb4cddd.json  query-a641f4976f06dc0016fbedec7f88055c30d20ef2705be4e19c2cb716d4c155e0.json  query-c6e3e2c66de5995fada042bdfd9273d47676e7f512871631f7e96836f90668f6.json  query-dfab8f0e78e38f92bd9980730b12dc9d3a3fa56489bcea5fcf2124c14a34bbd3.json
app/: .env.example  Cargo.toml  package-lock.json  package.json
app/migrations/: 20241203014834_create_users.sql  20241203032852_create_travel_entries.sql
app/src/: app.js  errors.rs  lib.rs  main.rs
app/src/auth/: middleware.rs
app/src/controllers/: userController.js
app/src/db/: schema.sql
app/src/handlers/: mod.rs  travel_entry.rs  upload.rs  user.rs
app/src/middleware/: authMiddleware.js
app/src/models/: travel_entry.rs  user.rs  userModel.js
app/src/routes/: userRoutes.js
app/src/utils/: db.js
docker/: Dockerfile
scripts/: build.sh  deploy.sh  init.sh  terraform.sh
(+44 files in other folders)
