[package]
name = "wanderlog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "chrono",
    "runtime-async-std-native-tls",
    "uuid",
] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.3"
